--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ html{
 } 
 
 #home{
-    background-image: url(/img/proiecte8.jpg);
+    background-image: url(img/proiecte8.jpg);
 }
 
 .menu-item:hover,
