--- a/informatii.css
+++ b/informatii.css
@@ -56,7 +56,7 @@ html{
 } 
 
 #home{
-    background-image: url(/img/colaj_acer_70-1_1_1.png);
+    background-image: url(img/colaj_acer_70-1_1_1.png);
 }
 
 .menu-item:hover,
