--- a/informatii.css
+++ b/informatii.css
@@ -217,7 +217,7 @@ html{
     }
         
     #home{
-        background-image: url(/img/proiecte8.jpg);
+        background-image: url(img/proiecte8.jpg);
     }
 
     .container2, .container3, .row2 {
